--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,12 @@ services:
       POSTGRES_DB: n8n
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U n8n -d n8n || exit 1"]
-      interval: 5s
-      timeout: 3s
-      retries: 20
     restart: unless-stopped
 
   n8n:
     image: n8nio/n8n:1.85.4
     ports:
-      - "5679:5678"
+      - "5678:5678"
     environment:
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=db
@@ -34,9 +29,7 @@ services:
       - n8n_data:/home/node/.n8n
       - ./dist:/home/node/.n8n/custom/my-node
 
-    depends_on:
-      db:
-        condition: service_healthy
+    # Giovanni
     restart: unless-stopped
 
 volumes:
